Backport changes to 1.16.5